# qt-demos

./: .gitignore  .gitmodules  AnimatingWindow.cpp  AnimatingWindow.h  BoardArray.cpp  BoardArray.h  CMakeLists.txt  ChartDemoWindow.cpp  ChartDemoWindow.h  FlowSwitch.cpp  FlowSwitch.h  Image.qrc  LICENSE  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  RenjuGroup.c  RenjuGroup.h  ShapeWidget.cpp  ShapeWidget.h  ThreadDialog.cpp  ThreadDialog.h  TrayIconApp.cpp  TrayIconApp.h  Vie.h  Viewer.cpp  Viewer.h  Viewer.qrc  VirtualKeyboard.cpp  VirtualKeyboard.h  WorkThread.cpp  WorkThread.h  main.cpp
Pair/: IntPair.c  IntPair.h
Point/: Point.c  Point.h
testfiles/: size.txt  test_record.txt
